--- a/source/assets/stylesheets/index.desktop.css.scss
+++ b/source/assets/stylesheets/index.desktop.css.scss
@@ -29,6 +29,9 @@
       padding: 0 5vw;
 
       .index-features-feature {
+        p {
+          max-width: 270px;
+        }
       }
     }
 
