--- a/source/assets/stylesheets/index.ipad.css.scss
+++ b/source/assets/stylesheets/index.ipad.css.scss
@@ -35,6 +35,14 @@
       }
     }
 
+    .index-features {
+      .index-features-feature {
+        p {
+          max-width: 200px;
+        }
+      }
+    }
+
     .index-quotes {
       padding: 3rem 0;
     }
